objects/tspa__VRA_Session_Notification__e.object
<CustomObject>
    <description>Real-time events driven from session initiation in Salesforce.
This platform events record is published from VRA managed automations.</description>
    <fields>
        <fullName>tspa__Data_JSON__c</fullName>
        <label>Data JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tspa__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Suport_Request_Id__c</fullName>
        <label>Suport Request Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>VRA Session Notification</label>
    <pluralLabel>VRA Session Notifications</pluralLabel>
</CustomObject>